--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <!-- Enhanced Viewport for All Devices -->
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0, viewport-fit=cover, user-scalable=yes"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
     />
     
     <!-- Force Responsive Design -->
